unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Account__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account identified for the Tracking Data</description>
    <inlineHelpText>Account identified for the Tracking Data</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AdRollTrackingDataAggregation__c</relationshipLabel>
    <relationshipName>AdRollTrackingDataAggregation_c</relationshipName>
    <type>Lookup</type>
</CustomField>