unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Click_Conversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__Click_Conversion__c</fullName>
    <description>Click Conversion</description>
    <formula>adroll__ClickConversion__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click Conversion</inlineHelpText>
    <label>Click Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>