unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Click_Costs__c.field-meta.xml
<CustomField>
    <fullName>adroll__Click_Costs__c</fullName>
    <description>Costs Incurred for the Clicks</description>
    <inlineHelpText>Costs Incurred for the Clicks</inlineHelpText>
    <label>Click Costs (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>