unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Contact__c.field-meta.xml
<CustomField>
    <fullName>adroll__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact identified for the Tracking Data</description>
    <inlineHelpText>Contact identified for the Tracking Data</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AdRollTrackingDataAggregation__c</relationshipLabel>
    <relationshipName>AdRollTrackingDataAggregation_c</relationshipName>
    <type>Lookup</type>
</CustomField>