unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__CTR__c.field-meta.xml
<CustomField>
    <fullName>adroll__CTR__c</fullName>
    <formula>adroll__Clicks__c / adroll__Impressions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>