unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Date__c.field-meta.xml
<CustomField>
    <fullName>adroll__Date__c</fullName>
    <description>Date of the Tracking Data Occurrence</description>
    <inlineHelpText>Date of the Tracking Data Occurrence</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>