unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Error__c.field-meta.xml
<CustomField>
    <fullName>adroll__Error__c</fullName>
    <label>Error (Deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>