unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Impression_Costs__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impression_Costs__c</fullName>
    <description>Costs Incurred for the Impressions</description>
    <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
    <label>Impression Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>