unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Impressions__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impressions__c</fullName>
    <description>Number of Impressions for the user</description>
    <inlineHelpText>Number of Impressions for the user</inlineHelpText>
    <label>Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>