unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Lead__c.field-meta.xml
<CustomField>
    <fullName>adroll__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead for the Tracking Data Record</description>
    <inlineHelpText>Lead for the Tracking Data Record</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>AdRollTrackingDataAggregation__c</relationshipLabel>
    <relationshipName>AdRollTrackingDataAggregation_c</relationshipName>
    <type>Lookup</type>
</CustomField>