unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Page_Views__c.field-meta.xml
<CustomField>
    <fullName>adroll__Page_Views__c</fullName>
    <description>Page Views</description>
    <inlineHelpText>Page Views</inlineHelpText>
    <label>Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>