unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Processed__c.field-meta.xml
<CustomField>
    <fullName>adroll__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked the data has been processed and merged with the Contact / Lead</description>
    <inlineHelpText>If Checked the data has been processed and merged with the Contact / Lead</inlineHelpText>
    <label>Processed (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>