unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Revenue__c.field-meta.xml
<CustomField>
    <fullName>adroll__Revenue__c</fullName>
    <description>Revenue</description>
    <inlineHelpText>Revenue</inlineHelpText>
    <label>Revenue (Deprecated)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>