unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Unique_Conversions_Visitors__c.field-meta.xml
<CustomField>
    <fullName>adroll__Unique_Conversions_Visitors__c</fullName>
    <description>Unique Conversions Visitors</description>
    <inlineHelpText>Unique Conversions Visitors</inlineHelpText>
    <label>Unique Conversions Visitors (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>