unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Unique_Impressions_Visitors__c.field-meta.xml
<CustomField>
    <fullName>adroll__Unique_Impressions_Visitors__c</fullName>
    <description>Unique Impressions Visitors</description>
    <inlineHelpText>Unique Impressions Visitors</inlineHelpText>
    <label>Unique Impressions Visitors (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>