unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__View_Conversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__View_Conversion__c</fullName>
    <formula>adroll__ViewConversion__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Conversion(Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>