unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__ViewConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ViewConversion__c</fullName>
    <description>View Conversion (Deprecated)</description>
    <inlineHelpText>View Conversion (Deprecated)</inlineHelpText>
    <label>View Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>