unpackaged/main/default/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Website__c.field-meta.xml
<CustomField>
    <fullName>adroll__Website__c</fullName>
    <description>Web Address for the Tracking Data</description>
    <externalId>true</externalId>
    <inlineHelpText>Web Address for the Tracking Data</inlineHelpText>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>